local/logs/project.log
2021-12-09T14:59:33.963Z - normal: Load ~/.CocosCreator/settings.json
2021-12-09T14:59:35.261Z - normal: Initializing Asset Database
2021-12-09T14:59:35.264Z - normal: checking language setting...
2021-12-09T14:59:35.264Z - normal: Language: en
2021-12-09T14:59:37.020Z - success: preview server running at http://localhost:7456
2021-12-09T14:59:37.023Z - success: protocol editor-framework registered
2021-12-09T14:59:37.023Z - success: protocol app registered
2021-12-09T14:59:37.023Z - success: protocol theme registered
2021-12-09T14:59:37.023Z - success: protocol packages registered
2021-12-09T14:59:37.023Z - success: protocol uuid registerred
2021-12-09T14:59:37.023Z - success: protocol db registerred
2021-12-09T14:59:37.023Z - success: protocol thumbnail registerred
2021-12-09T14:59:37.023Z - success: protocol unpack registerred
2021-12-09T14:59:37.023Z - success: protocol disable-commonjs registerred
2021-12-09T14:59:38.653Z - normal: connected!
2021-12-09T14:59:38.654Z - normal: Check project D:\IT\Gemi\2048Clone\NewProject
2021-12-09T14:59:38.672Z - normal: Initializing project D:\IT\Gemi\2048Clone\NewProject
2021-12-09T14:59:39.323Z - normal: Initializing Cocos2d
2021-12-09T14:59:40.866Z - normal: Initializing engine extends
2021-12-09T14:59:40.912Z - success: alipay-adapter loaded
2021-12-09T14:59:40.919Z - success: asset-db-debugger loaded
2021-12-09T14:59:40.922Z - success: baidu-adapter loaded
2021-12-09T14:59:40.928Z - success: color-picker loaded
2021-12-09T14:59:41.178Z - success: fb-audience-network loaded
2021-12-09T14:59:41.282Z - success: fb-live-stream loaded
2021-12-09T14:59:41.287Z - success: google-play-instant loaded
2021-12-09T14:59:41.296Z - success: huawei-runtime loaded
2021-12-09T14:59:41.715Z - success: cpk-publish loaded
2021-12-09T14:59:41.718Z - success: jsb-adapter loaded
2021-12-09T14:59:41.729Z - success: oppo-runtime loaded
2021-12-09T14:59:41.735Z - success: package-manager loaded
2021-12-09T14:59:41.932Z - success: qqplay-adapter loaded
2021-12-09T14:59:41.935Z - success: runtime-dev-tools loaded
2021-12-09T14:59:41.943Z - success: sdkbox loaded
2021-12-09T14:59:41.949Z - success: tester loaded
2021-12-09T14:59:41.953Z - success: ui-kit-preview-extra loaded
2021-12-09T14:59:41.957Z - success: ui-kit-preview loaded
2021-12-09T14:59:41.961Z - success: ui-kit loaded
2021-12-09T14:59:41.977Z - success: vivo-runtime loaded
2021-12-09T14:59:41.979Z - success: weapp-adapter loaded
2021-12-09T14:59:41.981Z - success: xiaomi-adapter loaded
2021-12-09T14:59:41.986Z - success: alipay-minigame loaded
2021-12-09T14:59:42.064Z - success: assets loaded
2021-12-09T14:59:42.067Z - success: builder loaded
2021-12-09T14:59:42.489Z - success: cocos-services loaded
2021-12-09T14:59:42.499Z - success: console loaded
2021-12-09T14:59:42.547Z - success: fb-instant-games loaded
2021-12-09T14:59:42.551Z - success: game-window loaded
2021-12-09T14:59:42.553Z - success: google-instant-games loaded
2021-12-09T14:59:42.560Z - success: hierarchy loaded
2021-12-09T14:59:42.565Z - success: inspector loaded
2021-12-09T14:59:42.567Z - success: keystore loaded
2021-12-09T14:59:42.573Z - success: node-library loaded
2021-12-09T14:59:42.575Z - success: package-asset loaded
2021-12-09T14:59:42.579Z - success: preferences loaded
2021-12-09T14:59:42.582Z - success: project-exporter loaded
2021-12-09T14:59:42.584Z - success: project-importer loaded
2021-12-09T14:59:42.588Z - success: project-settings loaded
2021-12-09T14:59:42.596Z - success: scene loaded
2021-12-09T14:59:42.598Z - success: simulator-debugger loaded
2021-12-09T14:59:42.600Z - success: sprite-editor loaded
2021-12-09T14:59:42.605Z - success: store loaded
2021-12-09T14:59:42.621Z - success: timeline loaded
2021-12-09T14:59:42.630Z - success: xiaomi-runtime loaded
2021-12-09T14:59:46.138Z - info: Cocos Services load base data!
2021-12-09T14:59:53.632Z - normal: Loading packages
2021-12-09T14:59:53.678Z - normal: Watching packages
2021-12-09T14:59:54.833Z - normal: Run Application
2021-12-09T16:28:02.506Z - info: Only the prefab node "item" and its child nodes are saved.
2021-12-09T16:34:49.714Z - info: Only the prefab node "item" and its child nodes are saved.
2021-12-09T16:46:20.445Z - failed: [db-task][sync-changes] Failed to import asset D:\IT\Gemi\2048Clone\NewProject\assets\Scripts\GameContainer.js, message: Compile error: SyntaxError: D:/IT/Gemi/2048Clone/NewProject/assets/Scripts/GameContainer.js: Unexpected token (21:8)
  19 |     createItem(){
  20 |         const pathX = 10,
> 21 |         const pathY = 10,
     |         ^
  22 | 
  23 |         for(let i = 0; i < 5; i++) {
  24 |             for(let j = 0; j < 5; j ++) {
    at Parser.pp$5.raise (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp$2.parseBindingAtom (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3090:12)
    at Parser.pp$1.parseVarHead (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2355:18)
    at Parser.pp$1.parseVar (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2338:10)
    at Parser.pp$1.parseVarStatement (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2169:8)
    at Parser.pp$1.parseStatement (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1861:19)
    at Parser.pp$1.parseBlockBody (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2268:21)
    at Parser.pp$1.parseBlock (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2247:8)
    at Parser.pp$3.parseFunctionBody (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4235:22)
2021-12-09T16:48:06.078Z - failed: [db-task][sync-changes] Failed to import asset D:\IT\Gemi\2048Clone\NewProject\assets\Scripts\GameContainer.js, message: Compile error: SyntaxError: D:/IT/Gemi/2048Clone/NewProject/assets/Scripts/GameContainer.js: Unexpected token (21:8)
  19 |     createItem(){
  20 |         const pathX = 10,
> 21 |         const pathY = 10,
     |         ^
  22 | 
  23 |         for(let i = 1; i < 5; i++) {
  24 |             for(let j = 1; j < 5; j ++) {
    at Parser.pp$5.raise (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp$2.parseBindingAtom (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3090:12)
    at Parser.pp$1.parseVarHead (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2355:18)
    at Parser.pp$1.parseVar (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2338:10)
    at Parser.pp$1.parseVarStatement (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2169:8)
    at Parser.pp$1.parseStatement (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1861:19)
    at Parser.pp$1.parseBlockBody (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2268:21)
    at Parser.pp$1.parseBlock (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2247:8)
    at Parser.pp$3.parseFunctionBody (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4235:22)
2021-12-09T16:53:53.255Z - failed: [db-task][sync-changes] Failed to import asset D:\IT\Gemi\2048Clone\NewProject\assets\Scripts\GameContainer.js, message: Compile error: SyntaxError: D:/IT/Gemi/2048Clone/NewProject/assets/Scripts/GameContainer.js: Unexpected token (21:8)
  19 |     createItem(){
  20 |         const padX = 10,
> 21 |         const padY = 10,
     |         ^
  22 | 
  23 |         for(let i = 1; i < 5; i++) {
  24 |             for(let j = 1; j < 5; j ++) {
    at Parser.pp$5.raise (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp$2.parseBindingAtom (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3090:12)
    at Parser.pp$1.parseVarHead (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2355:18)
    at Parser.pp$1.parseVar (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2338:10)
    at Parser.pp$1.parseVarStatement (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2169:8)
    at Parser.pp$1.parseStatement (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1861:19)
    at Parser.pp$1.parseBlockBody (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2268:21)
    at Parser.pp$1.parseBlock (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2247:8)
    at Parser.pp$3.parseFunctionBody (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4235:22)
2021-12-09T17:07:44.282Z - error: Window "main" unresponsive: [object Object]
    at BrowserWindow.nativeWin.on.e (D:\IT\Gemi\app\cocos\CocosCreator\resources\app.asar\editor-framework\lib\main\window.js:1:2243)
    at emitOne (events.js:96:13)
    at BrowserWindow.emit (events.js:191:7)
